--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 :root {
-  --dark-color-a: #667aff;
-  --dark-color-b: #7386ff;
+  --dark-color-a: #8a5e00;
+  --dark-color-b: #4f3705;
   --light-color: #e6e9ff;
   --success-color: #5cb85c;
   --error-color: #d9534f;
@@ -17,7 +17,8 @@
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  background: var(--light-color);
+  /*background: var(--light-color);*/
+  background-image: url("../images/cheemsbg.jpg");
   margin: 20px;
 }
 
@@ -42,16 +43,18 @@ a {
 
 .chat-container {
   max-width: 1100px;
+  max-height: 3000px;
   background: #fff;
   margin: 30px auto;
   overflow: hidden;
+  /*border-top-left-radius: 10px;
+  border-top-right-radius: 10px;*/
+  border-radius: 10px;
 }
 
 .chat-header {
   background: var(--dark-color-a);
   color: #fff;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
   padding: 15px;
   display: flex;
   align-items: center;
@@ -66,6 +69,7 @@ a {
 .chat-sidebar {
   background: var(--dark-color-b);
   color: #fff;
+
   padding: 20px 20px 60px;
   overflow-y: scroll;
 }
@@ -87,7 +91,11 @@ a {
 
 .chat-messages {
   padding: 30px;
-  max-height: 500px;
+  height: 700px;
+  /*max-height: 500px;*/
+  background-image: url("../images/swoleDoge.png");
+  background-repeat: no-repeat;
+  background-position: center -10%;
   overflow-y: scroll;
 }
 
@@ -190,8 +198,8 @@ a {
 }
 
 .imagePreview {
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  /*height: 500px;*/
 }
 
 @media (max-width: 700px) {
@@ -201,5 +209,9 @@ a {
 
   .chat-sidebar {
     display: none;
+  }
+
+  .imagePreview {
+    width: 100%;
   }
 }
